--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,7 +2,7 @@ name: First-workflow
 on: workflow_dispatch
 jobs:
   first_job:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
         run: echo "Hello World"
